--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -94,3 +94,28 @@ h1, h2, h3, h4, h5, h6 {
 #footer:after {
 	content: " \00a0 ";
 }
+
+#main code {
+	background-color: #f8f8f8;
+	border: 1px solid #ddd;
+	margin: 0;
+	padding: 0;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+
+#main pre {
+	background-color: #f8f8f8;
+	border: 1px solid #ddd;
+	margin: 10px 0 2px 0;
+	padding: 6px 10px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+
+#main pre > code {
+	border: none;
+	background-color: transparent;
+}
