--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -63,6 +63,13 @@ h1, h2, h3, h4, h5, h6 {
 
 #head li > ul {
 	display: none;
+	position: absolute;
+	top: 1em;
+	left: 0px;
+}
+
+#head li:hover > ul {
+	display: block;
 }
 
 #main {
