--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -65,12 +65,13 @@ h1, h2, h3, h4, h5, h6 {
 #head > ul > li > ul {
 	display: none;
 	position: absolute;
-	top: 1em;
-	left: 0px;
+	top: 1.4em;
+	left: -3;
+	width: 22em;
 	
-	list-style-type: none;
+	list-style-type: square;
 	margin: 0;
-	padding: 5px 5px 5px 5px;
+	padding: 5px 5px 5px 2em;
 	
 	background-color: #fff;
 	border: solid 1px #ddd;
