--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -65,13 +65,13 @@ h1, h2, h3, h4, h5, h6 {
 #head > ul > li > ul {
 	display: none;
 	position: absolute;
-	top: 1.4em;
-	left: -3;
+	top: 1em;
+	left: 0px;
 	width: 22em;
 	
 	list-style-type: square;
 	margin: 0;
-	padding: 5px 5px 5px 2em;
+	padding: 10px 5px 5px 2em;
 	
 	background-color: #fff;
 	border: solid 1px #ddd;
