--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -139,3 +139,7 @@ h1, h2, h3, h4, h5, h6 {
 	border: none;
 	background-color: transparent;
 }
+
+#devdocs h1, #devdocs h2, #devdocs h3 {
+	font-size: 80%;
+}
