--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -140,6 +140,14 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: transparent;
 }
 
-#devdocs h1, #devdocs h2, #devdocs h3 {
-	font-size: 80%;
+#devdocs h1 {
+	font-size: 1.5em;
+}
+
+#devdocs h2 {
+	font-size: 1.17em;
+}
+
+#devdocs h3 {
+	font-size: 1.08em;
 }
