--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -151,3 +151,8 @@ h1, h2, h3, h4, h5, h6 {
 #devdocs h3 {
 	font-size: 1.08em;
 }
+
+#devdocs.mdname {
+	font-style: normal;
+	font-family: monospace;
+}
