--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -155,4 +155,14 @@ h1, h2, h3, h4, h5, h6 {
 #devdocs .mdname {
 	font-style: normal;
 	font-family: monospace;
+	font-size: 1em;
+	font-weight: bold;
+	
+	background-color: #f8f8f8;
+	border: 1px solid #ddd;
+	margin: 10px 0 2px 0;
+	padding: 6px 10px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
 }
