--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -158,8 +158,8 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 1.2em;
 	font-weight: bold;
 	
-	background-color: #f8f8f8;
-	border: 1px solid #ddd;
+	background-color: #e8efff;
+	border: 1px solid #ccd;
 	margin: 10px 0 2px 0;
 	padding: 6px 10px;
 	-moz-border-radius: 3px;
