--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6 {
 	
 	background-color: #e8efff;
 	border: 1px solid #ccd;
-	margin: 10px 0 2px 0;
+	margin: 10px 0px 2px 0px;
 	padding: 6px 10px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -169,4 +169,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #devdocs hr {
 	display: none;
+}
+
+#includes * {
+	margin-left: 16px;
 }
