--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -152,7 +152,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 1.08em;
 }
 
-#devdocs .mdname {
+#includes .mdname {
 	font-style: normal;
 	font-family: monospace;
 	font-size: 1.2em;
@@ -167,10 +167,10 @@ h1, h2, h3, h4, h5, h6 {
 	border-radius: 3px;
 }
 
-#devdocs hr {
+#includes hr {
 	display: none;
 }
 
-#includes * {
+#includes div {
 	margin-left: 16px;
 }
