--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -180,3 +180,25 @@ h1, h2, h3, h4, h5, h6 {
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
 }
+
+#issues {
+	list-style-type: none;
+	padding: 0;
+}
+
+#issues > li {
+	list-style-type: none;
+	display: block;
+	
+	margin: 10px 0px 2px 0px;
+	
+	border: 1px solid #ddd;
+	padding: 6px 10px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
+
+span.issuetitle {
+	font-weight: bold;
+}
