updated font face

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -1,6 +1,6 @@
 
 body, html {
-	font-family: 'Geneva', 'Verdana', sans-serif;
+	font-family: 'Lucida Sans Unicode','Lucida Sans','Lucida Grande',Geneva,Verdana,sans-serif;
 	background-color: #fff;
 	margin: 0px;
 	padding: 0px;
